--- a/package.json
+++ b/package.json
@@ -1,9 +1,16 @@
 {
-  "name": "startup-scripts",
-  "displayName": "Startup Scripts",
+  "name": "run-script-on-start",
+  "displayName": "Run Script On Startup",
   "description": "Run shell commands on VS Code startup and show output as notifications",
   "version": "0.0.2",
-  "publisher": "vscode-extensions",
+  "publisher": "Oxidiz3",
+  "keywords": [
+    "startup",
+    "scripts",
+    "automation",
+    "shell",
+    "commands"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/Oxidiz3/VsCodeRunScriptOnStart"
@@ -22,7 +29,7 @@
   "contributes": {
     "configuration": {
       "type": "object",
-      "title": "Startup Scripts",
+      "title": "Run Script On Startup",
       "properties": {
         "startupScripts.commands": {
           "type": "array",
